--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,30 +20,34 @@
 
       <!-- Right Side Paths -->
       <ul class="navbar-nav d-flex">
-        <!-- Current User -->
-        <li class="nav-item">
-          <a class="nav-link disabled" href=""></a>
-        </li>
+        <% if authorized? %>
+          <!-- Current User -->
+          <li class="nav-item">
+            <a class="nav-link disabled" href=""><%= current_user.username %></a>
+          </li>
 
-        <!-- Profile Path -->
-        <li class="nav-item">
-          <%= link_to "Profile", root_path, class: "nav-link" %>
-        </li>
+          <!-- Profile Path -->
+          <li class="nav-item">
+            <%= link_to "Profile", root_path, class: "nav-link" %>
+          </li>
 
-        <!-- Sign Out Path -->
-        <li class="nav-item">
-          <%= button_to "SignOut", root_path, method: :delete, class: "nav-link" %>
-        </li>
+          <!-- Sign Out Path -->
+          <li class="nav-item">
+            <%= button_to "SignOut", sign_out_path, method: :delete, class: "nav-link" %>
+          </li>
 
-        <!-- Sign In Path -->
-        <li class="nav-item">
-          <%= link_to "SignIn", root_path, class: "nav-link" %>
-        </li>
+        <% else %>
 
-        <!-- Sign Up Path -->
-        <li class="nav-item">
-          <%= link_to "SignUp", root_path, class: "nav-link" %>
-        </li>
+          <!-- Sign In Path -->
+          <li class="nav-item">
+            <%= link_to "SignIn", sign_in_path, class: "nav-link" %>
+          </li>
+
+          <!-- Sign Up Path -->
+          <li class="nav-item">
+            <%= link_to "SignUp", sign_up_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
