--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,18 @@
 
 <!-- Body Section -->
 <div class="container">
+  <br/>
+  <!-- Notice Message -->
+  <% if notice %>
+    <%= render 'layouts/notices' %>
+  <% end %>
+
+  <!-- Alert Message -->
+  <% if alert %>
+    <%= render 'layouts/alerts' %>
+  <% end %>
+
+  <!-- Body Rendering -->
   <%= yield %>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
