--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,9 +13,13 @@
 
       <!-- Left Side Paths -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!--        <li class="nav-item">-->
-        <!--          <a class="nav-link" href="#">Link</a>-->
-        <!--        </li>-->
+        <li class="nav-item">
+          <%= link_to "Books", books_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to "New Book", new_book_path, class: "nav-link" %>
+        </li>
       </ul>
 
       <!-- Right Side Paths -->
