--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,5 +3,5 @@
 <div class="btn-group" role="group" aria-label="Basic example">
   <%= link_to "Edit this book", edit_book_path(@book), class: "btn btn-success" %>
   <%= link_to "Back to books", books_path, class: "btn btn-primary" %>
-  <%= button_to "Remove this book", @book, method: :delete, class: "btn btn-danger" %>
+  <%= button_to "Remove this book", @book, data: { confirm: "Are you sure?", turbo_confirm: "Are you sure want to remove the book?" }, method: :delete, class: "btn btn-danger" %>
 </div>
