--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: book) do |form| %>
   <% if book.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <h5><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h5>
 
       <ul>
         <% book.errors.each do |error| %>
@@ -24,7 +24,7 @@
   </div>
 
   <div class="mb-3 form-group">
-    <%= form.number_field :publication_year, class: "form-control" %>
+    <%= form.number_field :publication_year, class: "form-control", placeholder: "Publication Year" %>
   </div>
 
   <div class="mb-3 form-group">
