--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
 
           <!-- Profile Path -->
           <li class="nav-item">
-            <%= link_to "Profile", root_path, class: "nav-link" %>
+            <%= link_to "Profile", profile_path, class: "nav-link" %>
           </li>
 
           <!-- Sign Out Path -->
